--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,5 @@ export_credentials.cfg
 data_*/
 mono_crash.*.json
 
-# FMOD
-fmod/.cache/
-fmod/.unsaved/
-fmod/.user/
+# VSCode settings
+.vscode/
